# verma-lab-testing

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  check_added_binary_files.py  check_files_for_strings.py  check_for_container_default.py  clean_paths_files.py  new_file.txt  setup.cfg  test_file.py  utils.py
PMBB/: test_file.py
custom_precommit_hooks/: check_added_binary_files.py  check_files_for_strings.py  check_for_container_default.py  clean_file_paths.py  clean_paths_files.py
