[metadata]
name = custom_precommit_hooks
version = 0.0.1
description = Custom hooks for pre-commits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hritvikgupta/verma-lab-testing
author = Hritvik Gupta
author_email = your-email@example.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    virtualenv>=20.10.0
python_requires = >=3.8

[options.packages.find]
include =
    custom_precommit_hooks

[options.entry_points]
console_scripts =
    clean-config-files = custom_precommit_hooks.clean_paths_files:main
    check-for-cluster-paths = custom_precommit_hooks.check_files_for_strings:main
    check-for-home-paths = custom_precommit_hooks.check_files_for_strings:main
    check-for-data-strings = custom_precommit_hooks.check_files_for_strings:main
    check-added-binary-files = custom_precommit_hooks.check_added_binary_files:main
    check-for-container-default = custom_precommit_hooks.check_for_container_default:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
